@@ -7,8 +7,9 @@ import java.util.ArrayList;
 //TODO: implementación de arboles
 
 public class TSHandler {
-	//FIXME: Integer por ahora será su "posición" en la tabla, que después se cambiará por el arbol,
-	//donde este valor será el valor de root
+	// FIXME: Integer por ahora será su "posición" en la tabla, que después se
+	// cambiará por el arbol,
+	// donde este valor será el valor de root
 	private ArrayList<Hashtable<Integer, String>> tsList;
 	private Integer lastPosTS;
 	private int currentTS;
@@ -27,30 +28,32 @@ public class TSHandler {
 	}
 
 	public void closeScope() {
-		//FIXME: como hacer para que se puedan poner en el fichero aun cerrandolas
+		// FIXME: como hacer para que se puedan poner en el fichero aun cerrandolas
 		tsList.remove(currentTS);
-		lastPosTS = tsList.getLast().size() - 1;
+		lastPosTS = tsList.get(tsList.size() - 1).size() - 1;
 		currentTS--;
 	}
 
-	public void insert(String id, int line) throws TSException {
-		//TODO: comprobar que jamas va a entrar un null en esta función
-		//Siempre estaremos añadiendo en la tabla de simbolos actual
+	public Pair<Token, Object> insert(String id, int line) throws TSException {
+		// TODO: comprobar que jamas va a entrar un null en esta función
+		// Siempre estaremos añadiendo en la tabla de simbolos actual
 		if (tsList.get(currentTS).contains(id))
 			throw new TSException("Linea " + line + ": variable " + id + " ya declarada");
 		tsList.get(currentTS).put(lastPosTS, id);
 		lastPosTS++;
+		return new Pair<Token, Object>(Token.ID, id);
 	}
 
-	public void toFile (String fileName) {
+	public void toFile(String fileName) {
 		try (PrintWriter writer = new PrintWriter(new FileWriter(fileName))) {
 			for (int i = 0; i < tsList.size(); i++) {
-				//FIXME: ver si el formato es válido y comprobar que se imprime correctamente
+				// FIXME: ver si el formato es válido y comprobar que se imprime correctamente
 				writer.println("CONTENIDOS DE LA TABLA #" + i + ":\n");
 				Hashtable<Integer, String> table = tsList.get(i);
 				for (Entry<Integer, String> entry : table.entrySet()) {
 					writer.println(" * LEXEMA : '" + entry.getValue() + "'\n");
-					//TODO: una vez implementado el arbol, printear el arbol, tendrá que ser con BEP
+					// TODO: una vez implementado el arbol, printear el arbol, tendrá que ser con
+					// BEP
 				}
 				writer.println();
 			}
